--- a/src/pages/builder/designTop/index.css
+++ b/src/pages/builder/designTop/index.css
@@ -1,6 +1,6 @@
 .design-top {
-  position: fixed;
-  height: 64px;
+  position: absolute;
+  height: 10%;
   width: 100%;
   z-index: 1000;
   background-color: #ffffff;
