--- a/src/pages/builder/leftPart/index.css
+++ b/src/pages/builder/leftPart/index.css
@@ -1,7 +1,7 @@
 .leftCom {
   width: 280px;
-  position: fixed;
-  top: 64px;
+  position: absolute;
+  top: 10%;
   left: 0;
   background-color: white;
   height: calc(100vh - 64px);
