--- a/src/pages/builder/designTop/index.css
+++ b/src/pages/builder/designTop/index.css
@@ -1,19 +1,20 @@
-.design-top {
+.design-top{
   position: absolute;
   height: 10%;
+  color: rgb(211, 202, 202);
   width: 100%;
   z-index: 1000;
+  /* border-bottom: 1px solid rgb(209, 203, 203); */
+  box-shadow: 0 0 2px 2px rgb(209, 203, 203);
   background-color: #ffffff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  padding: 0 24px;
 }
 
 .design-top .title {
-  color: #6c63ff;
-  font-size: 24px;
+  color:rgb(71, 67, 138);
+  position: relative;
+  left: 100px;
+  font-size: 28px;
+  top: 15px;
   font-style: italic;
-  font-weight: 600;
-  margin: 0;
+  font-weight: bold;
 }
