--- a/src/pages/builder/rightPart/index.css
+++ b/src/pages/builder/rightPart/index.css
@@ -4,23 +4,31 @@
   top: 10%;
   width: 20%;
   height: 90%;
-  /* border-left: 1px solid #e0e0e0;
-   */
   background-color: #fff;
-  padding: 10px;
 }
 
 .propertyBox{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+ width: 200px;
+ height: 60px;
+ justify-content: space-between;
 }
 
-.inputBox{
+/* .inputBox{
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+} */
+
+.propertyLabel{
+  width: 200px;
+  /* height: 100%; */
+  margin-right: 15px;
+  margin-top: 5px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  /* overflow: hidden; */
+  
 }
