--- a/src/pages/builder/rightPart/index.css
+++ b/src/pages/builder/rightPart/index.css
@@ -1,17 +1,22 @@
 .rightCom {
   position: absolute;
   right: 0;
-  top: 10%;
-  width: 20%;
-  height: 90%;
+  top: 64px;
+  width: 280px;
+  height: calc(100vh - 64px);
   background-color: #fff;
+  border-left: 1px solid #f0f0f0;
+  overflow-y: auto;
+  padding: 16px;
 }
 
-.propertyBox{
+.propertyBox {
   display: flex;
- width: 200px;
- height: 60px;
- justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
 }
 
 /* .inputBox{
@@ -22,13 +27,12 @@
   justify-content: center;
 } */
 
-.propertyLabel{
-  width: 200px;
-  /* height: 100%; */
+.propertyLabel {
+  width: 100px;
   margin-right: 15px;
-  margin-top: 5px;
   white-space: nowrap;
   text-overflow: ellipsis;
-  /* overflow: hidden; */
-  
+  overflow: hidden;
+  color: #2c3e50;
+  font-size: 14px;
 }
